# un-unbis-thesaurus-scraper

./: .pre-commit-config.yaml  Makefile  README.md  all_topics.json  consts.py  graph.html  hierarchy.json  main.py  nodes.html  output.html  output.json  pyproject.toml  requirements.txt  scrape.ipynb  scrape_categories.ipynb  scraper.py  to_sigma.ipynb  topic.py  topics.html  topics.json  utils.py
example/: main.py
src/: consts.py  scraper.py
thesaurus/: consts.py  graphdb.py  network.py  scraper.py  utils.py
