[tool.poetry]
name = "thesaurus"
version = "1.0.0"
description = "Python scraper to scrape UNBIS Thesaurus database"
authors = ["Clément Sicard, <clement.sicard@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
networkx = "^3.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
